# pvpoke

./: .gitignore  DEVELOPMENT_NOTES.md  compare_with_rankings.py  cp_validation_comprehensive.py  debug_battle_consistency.py  debug_cp_calculations.py  pyproject.toml  run_validation_example.py  simple_validation.py  test_cp_validation.py  validate_implementations.py
python/: HIGH_PRIORITY_BAITING_FIXES.md  README.md  TODO.md  battle_ai_plan.md  debug_ai_test.py  end_to_end_simulation_test_plan.md  pyproject.toml  requirements.txt  run_tests.py  test_ai_port.py  test_import.py  test_ranking_implementation.py
python/docs/: README_javascript_validation.md  battle_ai_plan.md  end_to_end_simulation_test_plan.md  performance_results.md
python/examples/: decision_option_demo.py  full_ranking_system.py  great_league_rankings.py  move_reordering_demo.py  simple_battle.py
python/pvpoke/: __init__.py
python/tests/: __init__.py  test_aegislash_damage_override.py  test_aegislash_energy_gain.py  test_aegislash_form_change.py  test_aegislash_form_stats.py  test_aegislash_move_initialization.py  test_aegislash_move_replacement.py  test_aegislash_ranking_special_cases.py  test_aegislash_shield_decision.py  test_baiting_priorities_validation.py  test_battle.py  test_cp_calculator.py  test_damage_calculator.py  test_data_loader.py  test_dp_queue_init.py  test_e2e_baiting_comparison.py  test_e2e_baiting_sequences.py  test_e2e_complex_matchups.py  test_e2e_performance.py  test_e2e_shield_scenarios.py  test_energy_stacking.py  test_gamemaster.py  test_integrated_baiting.py  (+10 more)
(+15 files in other folders)
