[project]
authors = [{name = "bitcloud2", email = "bitcloud22@gmail.com"}]
dependencies = []
description = "Python implementation of PvPoke battle simulator for Pokemon GO PvP"
name = "pvpoke"
requires-python = ">= 3.11"
version = "0.1.0"
readme = "python/README.md"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-64"]

[tool.pixi.pypi-dependencies]
pvpoke = { path = "./python", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pytest = ">=8.4.2,<9"
