[project]
name = "pvpoke"
version = "0.1.0"
description = "Python implementation of PvPoke battle simulator for Pokemon GO PvP"
authors = [{name = "bitcloud2", email = "bitcloud22@gmail.com"}]
requires-python = ">= 3.11"
dependencies = []
readme = "README.md"
license = {text = "MIT"}
keywords = ["pokemon", "go", "pvp", "battle", "simulator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://pvpoke.com"
Repository = "https://github.com/pvpoke/pvpoke"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pvpoke"]